--- a/js/node.js/console-app/console-app/package.json
+++ b/js/node.js/console-app/console-app/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "nodejs-console-app",
   "main": "app.js",
-  "author": {
-    "name": "z"
+  "author": "gerkenv@gmail.com",
+  "scripts" : {
+    "debug": "node --nolazy --inspect-brk=9229 ./app.js"
   }
 }
